exports[`prefer-date-now > invalid(1): const ts = new Date().getTime(); 1`] = `

  1 | const ts = new Date().getTime();

`;

exports[`prefer-date-now > invalid(1): const ts = new Date().getTime(); 2`] = `

Message:
> 1 | const ts = new Date().getTime();
    |                       ^^^^^^^ Prefer \`Date.now()\` over \`Date#getTime()\`.

Output:
  1 | const ts = Date.now();

`;

exports[`prefer-date-now > invalid(10): const ts = - /* 1 */ new Date(); 1`] = `

  1 | const ts = - /* 1 */ new Date();

`;

exports[`prefer-date-now > invalid(10): const ts = - /* 1 */ new Date(); 2`] = `

Message:
> 1 | const ts = - /* 1 */ new Date();
    |                      ^^^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

Output:
  1 | const ts = - /* 1 */ Date.now();

`;

exports[`prefer-date-now > invalid(11): const ts = +(new Date()); 1`] = `

  1 | const ts = +(new Date());

`;

exports[`prefer-date-now > invalid(11): const ts = +(new Date()); 2`] = `

Message:
> 1 | const ts = +(new Date());
    |            ^^^^^^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

Output:
  1 | const ts = Date.now();

`;

exports[`prefer-date-now > invalid(12): const ts = -(new Date()); 1`] = `

  1 | const ts = -(new Date());

`;

exports[`prefer-date-now > invalid(12): const ts = -(new Date()); 2`] = `

Message:
> 1 | const ts = -(new Date());
    |              ^^^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

Output:
  1 | const ts = -(Date.now());

`;

exports[`prefer-date-now > invalid(13): const ts = new Date() - 0 1`] = `

  1 | const ts = new Date() - 0

`;

exports[`prefer-date-now > invalid(13): const ts = new Date() - 0 2`] = `

Message:
> 1 | const ts = new Date() - 0
    |            ^^^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

Output:
  1 | const ts = Date.now() - 0

`;

exports[`prefer-date-now > invalid(14): const foo = bar - new Date 1`] = `

  1 | const foo = bar - new Date

`;

exports[`prefer-date-now > invalid(14): const foo = bar - new Date 2`] = `

Message:
> 1 | const foo = bar - new Date
    |                   ^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

Output:
  1 | const foo = bar - Date.now()

`;

exports[`prefer-date-now > invalid(15): const foo = new Date() * bar 1`] = `

  1 | const foo = new Date() * bar

`;

exports[`prefer-date-now > invalid(15): const foo = new Date() * bar 2`] = `

Message:
> 1 | const foo = new Date() * bar
    |             ^^^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

Output:
  1 | const foo = Date.now() * bar

`;

exports[`prefer-date-now > invalid(16): const ts = new Date() / 1 1`] = `

  1 | const ts = new Date() / 1

`;

exports[`prefer-date-now > invalid(16): const ts = new Date() / 1 2`] = `

Message:
> 1 | const ts = new Date() / 1
    |            ^^^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

Output:
  1 | const ts = Date.now() / 1

`;

exports[`prefer-date-now > invalid(17): const ts = new Date() % Infinity 1`] = `

  1 | const ts = new Date() % Infinity

`;

exports[`prefer-date-now > invalid(17): const ts = new Date() % Infinity 2`] = `

Message:
> 1 | const ts = new Date() % Infinity
    |            ^^^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

Output:
  1 | const ts = Date.now() % Infinity

`;

exports[`prefer-date-now > invalid(18): const ts = new Date() ** 1 1`] = `

  1 | const ts = new Date() ** 1

`;

exports[`prefer-date-now > invalid(18): const ts = new Date() ** 1 2`] = `

Message:
> 1 | const ts = new Date() ** 1
    |            ^^^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

Output:
  1 | const ts = Date.now() ** 1

`;

exports[`prefer-date-now > invalid(19): const zero = (new Date(/* 1 */) /* 2 */) /* 3 */ - /* 4 */new Date 1`] = `

  1 | const zero = (new Date(/* 1 */) /* 2 */) /* 3 */ - /* 4 */new Date

`;

exports[`prefer-date-now > invalid(19): const zero = (new Date(/* 1 */) /* 2 */) /* 3 */ - /* 4 */new Date 2`] = `

Message:
> 1 | const zero = (new Date(/* 1 */) /* 2 */) /* 3 */ - /* 4 */new Date
    |               ^^^^^^^^^^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

`;

exports[`prefer-date-now > invalid(19): const zero = (new Date(/* 1 */) /* 2 */) /* 3 */ - /* 4 */new Date 3`] = `

Message:
> 1 | const zero = (new Date(/* 1 */) /* 2 */) /* 3 */ - /* 4 */new Date
    |                                                           ^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

Output:
  1 | const zero = (new Date(/* 1 */) /* 2 */) /* 3 */ - /* 4 */Date.now()

`;

exports[`prefer-date-now > invalid(2): const ts = (new Date).getTime(); 1`] = `

  1 | const ts = (new Date).getTime();

`;

exports[`prefer-date-now > invalid(2): const ts = (new Date).getTime(); 2`] = `

Message:
> 1 | const ts = (new Date).getTime();
    |                       ^^^^^^^ Prefer \`Date.now()\` over \`Date#getTime()\`.

Output:
  1 | const ts = Date.now();

`;

exports[`prefer-date-now > invalid(20): foo -= new Date() 1`] = `

  1 | foo -= new Date()

`;

exports[`prefer-date-now > invalid(20): foo -= new Date() 2`] = `

Message:
> 1 | foo -= new Date()
    |        ^^^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

Output:
  1 | foo -= Date.now()

`;

exports[`prefer-date-now > invalid(21): foo *= new Date() 1`] = `

  1 | foo *= new Date()

`;

exports[`prefer-date-now > invalid(21): foo *= new Date() 2`] = `

Message:
> 1 | foo *= new Date()
    |        ^^^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

Output:
  1 | foo *= Date.now()

`;

exports[`prefer-date-now > invalid(22): foo /= new Date 1`] = `

  1 | foo /= new Date

`;

exports[`prefer-date-now > invalid(22): foo /= new Date 2`] = `

Message:
> 1 | foo /= new Date
    |        ^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

Output:
  1 | foo /= Date.now()

`;

exports[`prefer-date-now > invalid(23): foo %= new Date() 1`] = `

  1 | foo %= new Date()

`;

exports[`prefer-date-now > invalid(23): foo %= new Date() 2`] = `

Message:
> 1 | foo %= new Date()
    |        ^^^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

Output:
  1 | foo %= Date.now()

`;

exports[`prefer-date-now > invalid(24): foo **= new Date() 1`] = `

  1 | foo **= new Date()

`;

exports[`prefer-date-now > invalid(24): foo **= new Date() 2`] = `

Message:
> 1 | foo **= new Date()
    |         ^^^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

Output:
  1 | foo **= Date.now()

`;

exports[`prefer-date-now > invalid(25): function foo(){return+new Date} 1`] = `

  1 | function foo(){return+new Date}

`;

exports[`prefer-date-now > invalid(25): function foo(){return+new Date} 2`] = `

Message:
> 1 | function foo(){return+new Date}
    |                      ^^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

Output:
  1 | function foo(){return Date.now()}

`;

exports[`prefer-date-now > invalid(26): function foo(){return-new Date} 1`] = `

  1 | function foo(){return-new Date}

`;

exports[`prefer-date-now > invalid(26): function foo(){return-new Date} 2`] = `

Message:
> 1 | function foo(){return-new Date}
    |                       ^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

Output:
  1 | function foo(){return-Date.now()}

`;

exports[`prefer-date-now > invalid(3): const ts = (new Date()).getTime(); 1`] = `

  1 | const ts = (new Date()).getTime();

`;

exports[`prefer-date-now > invalid(3): const ts = (new Date()).getTime(); 2`] = `

Message:
> 1 | const ts = (new Date()).getTime();
    |                         ^^^^^^^ Prefer \`Date.now()\` over \`Date#getTime()\`.

Output:
  1 | const ts = Date.now();

`;

exports[`prefer-date-now > invalid(4): const ts = new Date().valueOf(); 1`] = `

  1 | const ts = new Date().valueOf();

`;

exports[`prefer-date-now > invalid(4): const ts = new Date().valueOf(); 2`] = `

Message:
> 1 | const ts = new Date().valueOf();
    |                       ^^^^^^^ Prefer \`Date.now()\` over \`Date#valueOf()\`.

Output:
  1 | const ts = Date.now();

`;

exports[`prefer-date-now > invalid(5): const ts = (new Date).valueOf(); 1`] = `

  1 | const ts = (new Date).valueOf();

`;

exports[`prefer-date-now > invalid(5): const ts = (new Date).valueOf(); 2`] = `

Message:
> 1 | const ts = (new Date).valueOf();
    |                       ^^^^^^^ Prefer \`Date.now()\` over \`Date#valueOf()\`.

Output:
  1 | const ts = Date.now();

`;

exports[`prefer-date-now > invalid(6): const ts = (new Date()).valueOf(); 1`] = `

  1 | const ts = (new Date()).valueOf();

`;

exports[`prefer-date-now > invalid(6): const ts = (new Date()).valueOf(); 2`] = `

Message:
> 1 | const ts = (new Date()).valueOf();
    |                         ^^^^^^^ Prefer \`Date.now()\` over \`Date#valueOf()\`.

Output:
  1 | const ts = Date.now();

`;

exports[`prefer-date-now > invalid(7): const ts = /* 1 */ Number(/* 2 */ new /* 3 */ Date( /* 4 */ ) /* 5 */) /* 6 */ 1`] = `

  1 | const ts = /* 1 */ Number(/* 2 */ new /* 3 */ Date( /* 4 */ ) /* 5 */) /* 6 */

`;

exports[`prefer-date-now > invalid(7): const ts = /* 1 */ Number(/* 2 */ new /* 3 */ Date( /* 4 */ ) /* 5 */) /* 6 */ 2`] = `

Message:
> 1 | const ts = /* 1 */ Number(/* 2 */ new /* 3 */ Date( /* 4 */ ) /* 5 */) /* 6 */
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Date.now()\` over \`Number(new Date())\`.

`;

exports[`prefer-date-now > invalid(8): const tsBigInt = /* 1 */ BigInt(/* 2 */ new /* 3 */ Date( /* 4 */ ) /* 5 */) /* 6 */ 1`] = `

  1 | const tsBigInt = /* 1 */ BigInt(/* 2 */ new /* 3 */ Date( /* 4 */ ) /* 5 */) /* 6 */

`;

exports[`prefer-date-now > invalid(8): const tsBigInt = /* 1 */ BigInt(/* 2 */ new /* 3 */ Date( /* 4 */ ) /* 5 */) /* 6 */ 2`] = `

Message:
> 1 | const tsBigInt = /* 1 */ BigInt(/* 2 */ new /* 3 */ Date( /* 4 */ ) /* 5 */) /* 6 */
    |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

`;

exports[`prefer-date-now > invalid(9): const ts = + /* 1 */ new Date; 1`] = `

  1 | const ts = + /* 1 */ new Date;

`;

exports[`prefer-date-now > invalid(9): const ts = + /* 1 */ new Date; 2`] = `

Message:
> 1 | const ts = + /* 1 */ new Date;
    |            ^^^^^^^^^^^^^^^^^^ Prefer \`Date.now()\` over \`new Date()\`.

`;
